# ot-harjoitustyo

./: .gitignore  README.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
study-app/: .env.test  pyproject.toml  tasks.py
study-app/data/: studyapp.csv
study-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
study-app/src/: build.py  config.py  database_connection.py  index.py  initialize_database.py
study-app/src/entities/: course.py  user.py
study-app/src/repositories/: course_repository.py  user_repository.py
study-app/src/services/: course_service.py  user_service.py
study-app/src/tests/repositories/: course_repository_test.py  user_repository_test.py
study-app/src/tests/services/: course_service_test.py  user_service_test.py
study-app/src/ui/: add_course_view.py  completed_view.py  course_page_view.py  create_user_view.py  login_view.py  main_view.py  ui.py
