[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = ["Mira <mira.tihverainen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
